--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,9 @@ go.work.sum
 # .vscode/
 
 bin/
+
+# Extracted source trees in Ubuntu package directories  
+distro/ubuntu/*/dms-git-repo/
+distro/ubuntu/*/DankMaterialShell-*/
+distro/ubuntu/danklinux/*/dsearch-*/
+distro/ubuntu/danklinux/*/dgop-*/
