processlist: convert to floating window

--- a/core/internal/config/embedded/hyprland.conf
+++ b/core/internal/config/embedded/hyprland.conf
@@ -126,9 +126,7 @@ windowrulev2 = float, class:^(firefox)$, title:^(Picture-in-Picture)$
 windowrulev2 = float, class:^(zoom)$
 
 # DMS windows floating by default
-windowrulev2 = float, class:^(org.quickshell)$, title:^(Settings)$
-windowrulev2 = float, class:^(org.quickshell)$, title:^(File)$
-
+windowrulev2 = float, class:^(org.quickshell)$
 windowrulev2 = opacity 0.9 0.9, floating:0, focus:0
 
 layerrule = noanim, ^(quickshell)$
