--- a/quickshell/matugen/templates/kitty.conf
+++ b/quickshell/matugen/templates/kitty.conf
@@ -6,3 +6,20 @@ background            {{colors.background.default.hex}}
 selection_foreground  {{colors.on_secondary.default.hex}}
 selection_background  {{colors.secondary_fixed_dim.default.hex}}
 url_color             {{colors.primary.default.hex}}
+
+color0   {{dank16.color0}}
+color1   {{dank16.color1}}
+color2   {{dank16.color2}}
+color3   {{dank16.color3}}
+color4   {{dank16.color4}}
+color5   {{dank16.color5}}
+color6   {{dank16.color6}}
+color7   {{dank16.color7}}
+color8   {{dank16.color8}}
+color9   {{dank16.color9}}
+color10  {{dank16.color10}}
+color11  {{dank16.color11}}
+color12  {{dank16.color12}}
+color13  {{dank16.color13}}
+color14  {{dank16.color14}}
+color15  {{dank16.color15}}
