--- a/core/.mockery.yml
+++ b/core/.mockery.yml
@@ -46,3 +46,9 @@ packages:
       outpkg: mocks_evdev
     interfaces:
       EvdevDevice:
+  github.com/AvengeMedia/DankMaterialShell/core/internal/version:
+    config:
+      dir: "internal/mocks/version"
+      outpkg: mocks_version
+    interfaces:
+      VersionFetcher:
