--- a/quickshell/matugen/templates/foot.ini
+++ b/quickshell/matugen/templates/foot.ini
@@ -3,3 +3,20 @@ foreground={{colors.on_surface.default.hex_stripped}}
 background={{colors.background.default.hex_stripped}}
 selection-foreground={{colors.on_surface.default.hex_stripped}}
 selection-background={{colors.primary_container.default.hex_stripped}}
+
+regular0={{dank16.color0 | remove_prefix: '#'}}
+regular1={{dank16.color1 | remove_prefix: '#'}}
+regular2={{dank16.color2 | remove_prefix: '#'}}
+regular3={{dank16.color3 | remove_prefix: '#'}}
+regular4={{dank16.color4 | remove_prefix: '#'}}
+regular5={{dank16.color5 | remove_prefix: '#'}}
+regular6={{dank16.color6 | remove_prefix: '#'}}
+regular7={{dank16.color7 | remove_prefix: '#'}}
+bright0={{dank16.color8 | remove_prefix: '#'}}
+bright1={{dank16.color9 | remove_prefix: '#'}}
+bright2={{dank16.color10 | remove_prefix: '#'}}
+bright3={{dank16.color11 | remove_prefix: '#'}}
+bright4={{dank16.color12 | remove_prefix: '#'}}
+bright5={{dank16.color13 | remove_prefix: '#'}}
+bright6={{dank16.color14 | remove_prefix: '#'}}
+bright7={{dank16.color15 | remove_prefix: '#'}}
