--- a/distro/ubuntu/dms-git/debian/control
+++ b/distro/ubuntu/dms-git/debian/control
@@ -2,7 +2,8 @@ Source: dms-git
 Section: x11
 Priority: optional
 Maintainer: Avenge Media <AvengeMedia.US@gmail.com>
-Build-Depends: debhelper-compat (= 13)
+Build-Depends: debhelper-compat (= 13),
+               golang-go (>= 2:1.22~)
 Standards-Version: 4.6.2
 Homepage: https://github.com/AvengeMedia/DankMaterialShell
 Vcs-Browser: https://github.com/AvengeMedia/DankMaterialShell
