--- a/distro/ubuntu/dms-git/debian/rules
+++ b/distro/ubuntu/dms-git/debian/rules
@@ -6,19 +6,38 @@ export DH_VERBOSE = 1
 GIT_DATE := $(shell date +%Y%m%d)
 GIT_COMMIT := HEAD
 
+# Go needs writable directories for its caches
+export HOME := $(CURDIR)/debian/tmp-home
+export GOCACHE := $(CURDIR)/debian/tmp-home/go-cache
+export GOMODCACHE := $(CURDIR)/debian/tmp-home/go-mod
+
+# Launchpad has no network access, so use local toolchain only
+export GOTOOLCHAIN := local
+
 %:
 	dh $@
 
 override_dh_auto_build:
-	# Git source is already included in source package (cloned by build-source.sh)
+	# Create Go cache directories (sbuild sets HOME to non-existent path)
+	mkdir -p $(HOME) $(GOCACHE) $(GOMODCACHE)
+
+	# Git source is already included in source package (cloned by ppa-build.sh)
 	# Launchpad build environment has no internet access
 	test -d dms-git-repo || (echo "ERROR: dms-git-repo directory not found!" && exit 1)
-	test -f dms-distropkg-amd64.gz || (echo "ERROR: dms-distropkg-amd64.gz not found!" && exit 1)
 
-	# Extract pre-built binary from latest release
-	# Note: For git versions, we use the latest release binary
-	# The QML files come from git master
-	gunzip -c dms-distropkg-amd64.gz > dms
+	# Patch go.mod to use Go 1.24 base version (Ubuntu has 1.24.4, project requires 1.24.6)
+	sed -i 's/^go 1\.24\.[0-9]*/go 1.24/' dms-git-repo/core/go.mod
+
+	# Build dms-cli from source
+	@if [ -f dms-git-repo/.dms-version ]; then \
+		. dms-git-repo/.dms-version; \
+		echo "Building with VERSION=$$VERSION COMMIT=$$COMMIT"; \
+		cd dms-git-repo/core && $(MAKE) GOFLAGS="-mod=vendor" dist ARCH=amd64 VERSION="$$VERSION" COMMIT="$$COMMIT"; \
+	else \
+		echo "Warning: .dms-version not found, building without version info"; \
+		cd dms-git-repo/core && $(MAKE) GOFLAGS="-mod=vendor" dist ARCH=amd64; \
+	fi
+	cp dms-git-repo/core/bin/dms-linux-amd64 dms
 	chmod +x dms
 
 override_dh_auto_install:
@@ -39,7 +58,8 @@ override_dh_auto_install:
 
 override_dh_auto_clean:
 	# Don't delete dms-git-repo directory - it's part of the source package (native format)
-	# Clean up build artifacts (but keep dms-distropkg-amd64.gz for Launchpad)
+	# Clean up build artifacts
 	rm -f dms
-	# Don't remove dms-distropkg-amd64.gz - it needs to be included in the source package for Launchpad builds
+	rm -rf dms-git-repo/core/bin
+	rm -rf debian/tmp-home
 	dh_auto_clean
