--- a/assets/dms-open.desktop
+++ b/assets/dms-open.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Type=Application
-Name=DMS Browser Picker
-Comment=Select a browser to open links
+Name=DMS Application Picker
+Comment=Select an application to open links and files
 Exec=dms open %u
 Icon=danklogo
 Terminal=false
 NoDisplay=true
-MimeType=x-scheme-handler/http;x-scheme-handler/https;text/html;
-Categories=Network;WebBrowser;
+MimeType=x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/file;text/html;
+Categories=Utility;
