--- a/quickshell/matugen/templates/ghostty.conf
+++ b/quickshell/matugen/templates/ghostty.conf
@@ -4,19 +4,19 @@ cursor-color = {{colors.primary.default.hex}}
 selection-background = {{colors.primary_container.default.hex}}
 selection-foreground = {{colors.on_surface.default.hex}}
 
-palette = 0={{dank16.color0}}
-palette = 1={{dank16.color1}}
-palette = 2={{dank16.color2}}
-palette = 3={{dank16.color3}}
-palette = 4={{dank16.color4}}
-palette = 5={{dank16.color5}}
-palette = 6={{dank16.color6}}
-palette = 7={{dank16.color7}}
-palette = 8={{dank16.color8}}
-palette = 9={{dank16.color9}}
-palette = 10={{dank16.color10}}
-palette = 11={{dank16.color11}}
-palette = 12={{dank16.color12}}
-palette = 13={{dank16.color13}}
-palette = 14={{dank16.color14}}
-palette = 15={{dank16.color15}}
+palette = 0={{dank16.color0.hex}}
+palette = 1={{dank16.color1.hex}}
+palette = 2={{dank16.color2.hex}}
+palette = 3={{dank16.color3.hex}}
+palette = 4={{dank16.color4.hex}}
+palette = 5={{dank16.color5.hex}}
+palette = 6={{dank16.color6.hex}}
+palette = 7={{dank16.color7.hex}}
+palette = 8={{dank16.color8.hex}}
+palette = 9={{dank16.color9.hex}}
+palette = 10={{dank16.color10.hex}}
+palette = 11={{dank16.color11.hex}}
+palette = 12={{dank16.color12.hex}}
+palette = 13={{dank16.color13.hex}}
+palette = 14={{dank16.color14.hex}}
+palette = 15={{dank16.color15.hex}}
