--- a/distro/ubuntu/dms-git/debian/rules
+++ b/distro/ubuntu/dms-git/debian/rules
@@ -56,6 +56,12 @@ override_dh_auto_install:
 	install -Dm644 dms-git-repo/quickshell/assets/systemd/dms.service \
 		debian/dms-git/usr/lib/systemd/user/dms.service
 
+	# Install desktop file and icon
+	install -Dm644 dms-git-repo/assets/dms-open.desktop \
+		debian/dms-git/usr/share/applications/dms-open.desktop
+	install -Dm644 dms-git-repo/core/assets/danklogo.svg \
+		debian/dms-git/usr/share/icons/hicolor/scalable/apps/danklogo.svg
+
 override_dh_auto_clean:
 	# Don't delete dms-git-repo directory - it's part of the source package (native format)
 	# Clean up build artifacts
