--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -3,15 +3,15 @@ name: Go CI
 on:
   push:
     branches:
-      - '**'
+      - "**"
     paths:
-      - 'core/**'
-      - '.github/workflows/go-ci.yml'
+      - "core/**"
+      - ".github/workflows/go-ci.yml"
   pull_request:
     branches: [master, main]
     paths:
-      - 'core/**'
-      - '.github/workflows/go-ci.yml'
+      - "core/**"
+      - ".github/workflows/go-ci.yml"
 
 concurrency:
   group: go-ci-${{ github.ref }}
@@ -44,7 +44,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v9
         with:
-          version: v2
+          version: v2.6
           working-directory: core
 
       - name: Test
