--- a/distro/ubuntu/dms/debian/rules
+++ b/distro/ubuntu/dms/debian/rules
@@ -48,6 +48,12 @@ override_dh_auto_install:
 	install -Dm644 DankMaterialShell-$(BASE_VERSION)/assets/systemd/dms.service \
 		debian/dms/usr/lib/systemd/user/dms.service
 
+	# Install desktop file and icon
+	install -Dm644 DankMaterialShell-$(BASE_VERSION)/assets/dms-open.desktop \
+		debian/dms/usr/share/applications/dms-open.desktop
+	install -Dm644 DankMaterialShell-$(BASE_VERSION)/assets/danklogo.svg \
+		debian/dms/usr/share/icons/hicolor/scalable/apps/danklogo.svg
+
 	# Generate and install shell completions (if applicable)
 	# Uncomment if dms supports completion generation
 	# ./dms completion bash > dms.bash
