--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -610,6 +610,8 @@ jobs:
           rm -rf %{buildroot}%{_datadir}/quickshell/dms/.github
           rm -rf %{buildroot}%{_datadir}/quickshell/dms/distro
 
+          echo "%{version}" > %{buildroot}%{_datadir}/quickshell/dms/VERSION
+
           %posttrans
           if [ -d "%{_sysconfdir}/xdg/quickshell/dms" ]; then
               rmdir "%{_sysconfdir}/xdg/quickshell/dms" 2>/dev/null || true
