--- a/distro/debian/dms-git/debian/rules
+++ b/distro/debian/dms-git/debian/rules
@@ -27,12 +27,11 @@ override_dh_auto_build:
 	# Patch go.mod to use Go 1.24 base version (Debian 13 has 1.23.x, may vary)
 	sed -i 's/^go 1\.24\.[0-9]*/go 1.24/' core/go.mod
 
-	# Extract version info for embedding
-	VERSION="$(UPSTREAM_VERSION)"
-	COMMIT=$$(echo "$(UPSTREAM_VERSION)" | grep -oP '(?<=git)[0-9]+\.[a-f0-9]+' | cut -d. -f2 | head -c8 || echo "unknown")
-
 	# Build dms-cli from source using vendored dependencies
+	# Extract version info and build in single shell to preserve variables
 	# Architecture mapping: Debian amd64/arm64 -> Makefile amd64/arm64
+	VERSION="$(UPSTREAM_VERSION)"; \
+	COMMIT=$$(echo "$(UPSTREAM_VERSION)" | grep -oP '(?<=git)[0-9]+\.[a-f0-9]+' | cut -d. -f2 | head -c8 || echo "unknown"); \
 	if [ "$(DEB_HOST_ARCH)" = "amd64" ]; then \
 		MAKE_ARCH=amd64; \
 		BINARY_NAME=dms-linux-amd64; \
@@ -70,6 +69,8 @@ override_dh_auto_install:
 
 	rm -rf debian/dms-git/usr/share/quickshell/dms/core \
 		debian/dms-git/usr/share/quickshell/dms/distro
+
+	echo "$(UPSTREAM_VERSION)" > debian/dms-git/usr/share/quickshell/dms/VERSION
 
 override_dh_auto_clean:
 	# Clean up build artifacts
