--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -599,6 +599,9 @@ jobs:
 
           install -Dm644 assets/systemd/dms.service %{buildroot}%{_userunitdir}/dms.service
 
+          # Install DBus service activation file
+          install -Dm644 assets/dbus/org.freedesktop.Notifications.service %{buildroot}%{_datadir}/dbus-1/services/org.freedesktop.Notifications.service
+
           install -Dm644 assets/dms-open.desktop %{buildroot}%{_datadir}/applications/dms-open.desktop
           install -Dm644 assets/danklogo.svg %{buildroot}%{_datadir}/icons/hicolor/scalable/apps/danklogo.svg
 
@@ -628,6 +631,7 @@ jobs:
           %doc README.md CONTRIBUTING.md
           %{_datadir}/quickshell/dms/
           %{_userunitdir}/dms.service
+          %{_datadir}/dbus-1/services/org.freedesktop.Notifications.service
           %{_datadir}/applications/dms-open.desktop
           %{_datadir}/icons/hicolor/scalable/apps/danklogo.svg
 
