--- a/assets/systemd/dms.service
+++ b/assets/systemd/dms.service
@@ -6,6 +6,7 @@ Requisite=graphical-session.target
 
 [Service]
 Type=simple
+BusName=org.freedesktop.Notifications
 ExecStart=/usr/bin/dms run --session
 ExecReload=/usr/bin/pkill -USR1 -x dms
 Restart=always
