packages: Update manual changelogs

--- a/distro/debian/dms/debian/rules
+++ b/distro/debian/dms/debian/rules
@@ -8,7 +8,7 @@ DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH)
 	dh $@
 
 override_dh_installsystemd:
-	dh_installsystemd --user --name=dms
+	dh_installsystemd --name=dms
 
 override_dh_auto_build:
 	if [ "$(DEB_HOST_ARCH)" = "amd64" ]; then \
