Update dms stable systemd & desktop path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -272,6 +272,9 @@ jobs:
           # Create QML source package (exclude build artifacts and git files)
           # Copy root LICENSE and CONTRIBUTING.md to quickshell/ for packaging
           cp LICENSE CONTRIBUTING.md quickshell/
+          
+          # Copy root assets directory to quickshell for systemd service and desktop file
+          cp -r assets quickshell/
 
           # Tar the CONTENTS of quickshell/, not the directory itself
           (cd quickshell && tar --exclude='.git' \
