feat: scaffold AI assistant slideout and wiring

--- a/core/internal/config/embedded/hyprland.conf
+++ b/core/internal/config/embedded/hyprland.conf
@@ -135,6 +135,7 @@ bind = $mod, M, exec, dms ipc call processlist focusOrToggle
 bind = $mod, comma, exec, dms ipc call settings focusOrToggle
 bind = $mod, N, exec, dms ipc call notifications toggle
 bind = $mod SHIFT, N, exec, dms ipc call notepad toggle
+bind = $mod SHIFT, A, exec, dms ipc call aiassistant toggle
 bind = $mod, Y, exec, dms ipc call dankdash wallpaper
 bind = $mod, TAB, exec, dms ipc call hypr toggleOverview
 
