ci: fix nix vendor-hash workflow

--- a/.github/workflows/update-vendor-hash.yml
+++ b/.github/workflows/update-vendor-hash.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           set -euo pipefail
           echo "Attempting nix build to get new vendorHash..."
-          if output=$(nix build .#dmsCli 2>&1); then
+          if output=$(nix build .#dms-shell 2>&1); then
             echo "Build succeeded, no hash update needed"
             exit 0
           fi
@@ -46,7 +46,7 @@ jobs:
           [ "$current_hash" = "$new_hash" ] && { echo "vendorHash already up to date"; exit 0; }
           sed -i "s|vendorHash = \"$current_hash\"|vendorHash = \"$new_hash\"|" flake.nix
           echo "Verifying build with new vendorHash..."
-          nix build .#dmsCli
+          nix build .#dms-shell
           echo "vendorHash updated successfully!"
 
       - name: Commit and push vendorHash update
